better diagrams for ch.4

--- a/cs/kap04.tex
+++ b/cs/kap04.tex
@@ -232,8 +232,8 @@ Algoritmus probíhá takto:
 
 \begin{figure}[ht]\centering
     \center
-    \includegraphics[width=140mm]{../img/diagram-slashingMode.png}
-    \caption{Diagram znázorňující mod sekání zjednodušeně ve 2D (meč modře, paprsek zlatě, vstupní body znázorněny dle číslování výše)}
+    \includegraphics[width=60mm]{../img/diagram-slashingMode.png}
+    \caption{Náčrt znázorňující mod sekání zjednodušeně ve 2D (meč modře, paprsek žlutě, kulová plocha zeleně, vstupní body znázorněny dle číslování výše)}
     \label{obr04:swordSlashingMode2D}
 \end{figure} 
  
